--- a/proyecto_zelda/clienteZelda/index.html
+++ b/proyecto_zelda/clienteZelda/index.html
@@ -28,7 +28,7 @@
                     <input type="number" class="mb-3 form-control" placeholder="defensa" id="defensa">
                     <input type="text" class="mb-3 form-control" placeholder="fotografia" id="fotografia">
                     <input type="date" class="mb-3 form-control" placeholder="fecha de creacion" id="fecha">
-                    <button class="btn btn-outline-dark" id="btnFormulario">registrar</button>
+                    <button type="button" class="btn btn-outline-dark" id="btnFormulario">registrar</button>
 
                 </form>
             </div>
@@ -38,6 +38,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js" type="module"></script>
 </body>
 </html>
