--- a/proyecto_zelda/clienteZelda/index.html
+++ b/proyecto_zelda/clienteZelda/index.html
@@ -28,8 +28,16 @@
                     <input type="number" class="mb-3 form-control" placeholder="defensa" id="defensa">
                     <input type="text" class="mb-3 form-control" placeholder="fotografia" id="fotografia">
                     <input type="date" class="mb-3 form-control" placeholder="fecha de creacion" id="fecha">
+                    <input type="text" class="mb-3 form-control" placeholder="categoria" id="categoria">
+                    <label for="">sigue con vida?</label>
+                    <select name="" class="mb-3 form-control" id="sigueVivo">
+                        <option value=""></option>
+                        <option value="si">si</option>
+                        <option value="no">no</option>
+                    </select>
                     <button type="button" class="btn btn-outline-dark" id="btnFormulario">registrar</button>
 
+                    
                 </form>
             </div>
 
